--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
   <!-- 🔷 হেডার -->
   <header>
-    <img src="candidate.jpg" alt="খন্দকার মুফঃ আব্দুর রাকিব">
+    <img src="https://github.com/rstsbd/Rakib-/blob/main/assets/IMG_20251029_010519.jpg" alt="খন্দকার মুফঃ আব্দুর রাকিব">
     <h1>খন্দকার মুফঃ আব্দুর রাকিব</h1>
     <p>বাংলাদেশ জামায়াতে ইসলামী মনোনীত সংসদ সদস্য পদপ্রার্থী</p>
     <p>আসন্ন জাতীয় সংসদ নির্বাচনে ৪৯ নওগাঁ-৪ (মান্দা) আসনে</p>
